--- a/src/index.css
+++ b/src/index.css
@@ -14,98 +14,7 @@ body {
   background: #f5f5f5;
 }
 
-button {
-  padding: 10px 20px;
-  background: #111;
-  color: #fff;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  border-radius: 5px;
-  font-size: 15px;
-}
-
-.navbar {
-  position: sticky;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #fff;
-  border-bottom: 1px solid #d5d5d5;
-}
-
-.navbar .logo {
-  color: #111;
-}
-
-.quiz-container {
-  position: relative;
-  margin: 50px auto 20px;
-  width: 95%;
-  max-width: 650px;
-  min-height: 350px;
-  background: #fff;
-  border: 1px  solid #eee;
-  box-shadow: 0px 2px 5px 2px rgba(0, 0 , 0,  0.05);
-}
-
-.join-screen {
-  width: 100%;
-  height: 350px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  text-align: center;
-  padding: 20px;
-}
-
-.join-screen h2 {
-  font-size: 25px;
-  color: #111;
-}
-
-.join-screen p {
-  max-width: 350px;
-  color: #555;
-}
-
-.quiz-screen .question .question-count {
-  margin: 20px 0;
-  text-align: center;
-  font-size: 15px;
-  color: #555;
-}
-
-.quiz-screen .question .main {
-  padding: 20px 40px;
-}
-
-.quiz-screen .question .main .title span {
-  font-size: 15px;
-  color: #555;
-  font-weight: 600;
-}
-
-.quiz-screen .question .main .title p {
-  margin-top: 5px;
-  color: #111;
-}
-
-.quiz-screen .question .main .options {
-  margin: 40px 0px 15px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap:20px;
-}
-
-.quiz-screen .question .main .options .option {
+.option {
   width: calc(50% - 20px);
   border: 1px solid #bbb;
   padding: 10px;
@@ -113,29 +22,13 @@ button {
   cursor: pointer;
 }
 
-.quiz-screen .question .main .options .option.active{
+.option.active{
   background: #1428cd;
   color: #fff;
 }
 
-.quiz-screen .question .control {
-  padding: 10px 20px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  border-top: 1px solid #eee;
-}
 
-.result-screen {
-  width: 100%;
-  height: 350px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
-}
-
+/* NOT implemented yet */
 .quiz-screen .question .progress-bar {
   width: 0%;
   height: 5px;
